kubernetes/apps/forgejo-runner/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
  namespace: forgejo-runner
  labels:
    app.kubernetes.io/name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: git.apps.mbhome.biz
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 10.20.30.200/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toServices:
        - k8sService:
            namespace: gateway-system
            serviceName: cilium-gateway-internal
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: forgejo
            k8s:app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
